[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pl.mmadej</groupId>
     <artifactId>spring</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
