--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.mmadej</groupId>
     <artifactId>spring</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
         <url>scm:git:git@github.com:maciekcom/spring.git</url>
         <developerConnection>scm:git:git@github.com:maciekcom/spring.git</developerConnection>
     </scm>
     <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://localhost:8080/archiva/repository/snapshots/</url>
+        </snapshotRepository>
         <repository>
-            <id>archiva</id>
-            <name>Local Archiva</name>
+            <id>internal</id>
             <url>http://localhost:8080/archiva/repository/internal/</url>
         </repository>
     </distributionManagement>
@@ -24,10 +29,4 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>internal</id>
-            <url>http://localhost:8080/archiva/repository/internal/</url>
-        </repository>
-    </repositories>
 </project>
