--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.mmadej</groupId>
     <artifactId>spring</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
         <url>scm:git:git@github.com:maciekcom/spring.git</url>
@@ -24,6 +24,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.2.2</version>
             </plugin>
         </plugins>
     </build>
