[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.mmadej</groupId>
     <artifactId>spring</artifactId>
-    <version>0.1.12</version>
+    <version>0.1.13-SNAPSHOT</version>
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
         <url>scm:git:git@github.com:maciekcom/spring.git</url>
