--- a/config/pom.xml
+++ b/config/pom.xml
@@ -5,6 +5,7 @@
     <groupId>pl.mmadej</groupId>
     <artifactId>config</artifactId>
     <version>0.11-SNAPSHOT</version>
+    <packaging>zip</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
@@ -38,25 +39,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.2.2</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2.2</version>
-                <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>dist</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
