--- a/config/pom.xml
+++ b/config/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pl.mmadej</groupId>
     <artifactId>config</artifactId>
-    <version>0.12-SNAPSHOT</version>
+    <version>0.12</version>
 
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
