--- a/application/pom.xml
+++ b/application/pom.xml
@@ -91,6 +91,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>pl.mmadej</groupId>
+            <artifactId>puppet-configuration</artifactId>
+            <version>0.17</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>3.1.1.RELEASE</version>
