--- a/application/pom.xml
+++ b/application/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.mmadej</groupId>
     <artifactId>application</artifactId>
-    <version>0.56-SNAPSHOT</version>
+    <version>0.56</version>
 
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
