--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,30 +5,14 @@
     <artifactId>application</artifactId>
     <version>0.56-SNAPSHOT</version>
 
-    <scm>
-        <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
-        <url>scm:git:git@github.com:maciekcom/spring.git</url>
-        <developerConnection>scm:git:git@github.com:maciekcom/spring.git</developerConnection>
-    </scm>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <url>http://localhost:8080/archiva/repository/snapshots/</url>
-        </snapshotRepository>
-        <repository>
-            <id>internal</id>
-            <url>http://localhost:8080/archiva/repository/internal/</url>
-        </repository>
-    </distributionManagement>
+    <parent>
+        <groupId>pl.mmadej</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0</version>
+    </parent>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.2</version>
-            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.2</version>
