--- a/puppet-configuration/pom.xml
+++ b/puppet-configuration/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pl.mmadej</groupId>
     <artifactId>puppet-configuration</artifactId>
-    <version>0.19</version>
+    <version>0.20-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
