--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,14 +5,13 @@
     <artifactId>application</artifactId>
     <version>0.57-SNAPSHOT</version>
 
-    <parent>
-        <groupId>pl.mmadej</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0</version>
-    </parent>
-
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.2.2</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.2</version>
