--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,6 +5,24 @@
     <artifactId>application</artifactId>
     <version>0.57-SNAPSHOT</version>
 
+
+    <scm>
+        <connection>scm:git:git@github.com:maciekcom/spring.git</connection>
+        <url>scm:git:git@github.com:maciekcom/spring.git</url>
+        <developerConnection>scm:git:git@github.com:maciekcom/spring.git</developerConnection>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://localhost:8080/archiva/repository/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>internal</id>
+            <url>http://localhost:8080/archiva/repository/internal/</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
