--- a/puppet-configuration/pom.xml
+++ b/puppet-configuration/pom.xml
@@ -32,4 +32,11 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>internal</id>
+            <url>http://localhost:8080/archiva/repository/internal/</url>
+        </repository>
+    </repositories>
+
 </project>
